objects/City_State_Ranking__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <description>Business Unit: HELMS.
Jira Story: LMS-3903 Story name.
Description: This is store the City.
Source System: Coming from batch feed daily basis.
Integration: NA.
Data Transformation: N/A.
Functional Definition: This will be used in Einstein Dashboards or Reports.</description>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Business Unit: HELMS.
Jira Story: LMS-3903 Story name.
Description: This is lookup to Dealer Account Records.
Source System: Coming from batch feed daily basis.
Integration: NA.
Data Transformation: N/A.
Functional Definition: This will be used in Einstein Dashboards or Reports.</description>
        <label>Dealer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>City State Ranking</relationshipLabel>
        <relationshipName>City_State_Ranking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dealer_Number__c</fullName>
        <description>Business Unit: HELMS.
Jira Story: LMS-3903 Story name.
Description: This is store the Dealer Number.
Source System: Coming from batch feed daily basis.
Integration: NA.
Data Transformation: N/A.
Functional Definition: This will be used in Einstein Dashboards or Reports.</description>
        <label>Dealer Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>Business Unit: HELMS.
Jira Story: LMS-3903 Story name.
Description: This is store the Dealer Division.
Source System: Coming from batch feed daily basis.
Integration: NA.
Data Transformation: N/A.
Functional Definition: This will be used in Einstein Dashboards or Reports.</description>
        <label>Division</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Launchbox_ID__c</fullName>
        <description>Business Unit: HELMS.
Jira Story: LMS-3903 Story name.
Description: This is used for Data Migration, external id, unique.
Source System: Coming from batch feed daily basis.
Integration: NA.
Data Transformation: N/A.
Functional Definition: This will be used in Einstein Dashboards or Reports.</description>
        <externalId>true</externalId>
        <label>Launchbox_ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Ranking__c</fullName>
        <description>Business Unit: HELMS.
Jira Story: LMS-3903 Story name.
Description: It&apos;s defines the ranking of dealer for the particular postal code and city.
Source System: Coming from batch feed daily basis.
Integration: NA.
Data Transformation: N/A.
Functional Definition: This will be used in Einstein Dashboards or Reports.</description>
        <label>Ranking</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>Business Unit: HELMS.
Jira Story: LMS-3903 Story name.
Description: This is store the State.
Source System: Coming from batch feed daily basis.
Integration: NA.
Data Transformation: N/A.
Functional Definition: This will be used in Einstein Dashboards or Reports.</description>
        <label>State</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>City State Ranking</label>
    <nameField>
        <label>City State Ranking</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>City State Ranking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>